--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ header .sns li:last-child { margin-bottom: 0 }
 
 
 #wrapper .mainBg.leftMinus100, #wrapper section.leftMinus100, #wrapper .groupping1.leftMinus100 { transform: translate(-100%); z-index: -1 }
-header .mainBg h4.leftMinus100 { transform: translate(-100%); transition: 0.2s; -webkit-transition: 0.2s; -ms-transition: 0.2s; -moz-transition: 0.2s; }
+header .mainBg h4.leftMinus100 { transform: translate(200%); -webkit-transform: translate(200%); -ms-transform: translate(200%); transition: 0.2s; -webkit-transition: 0.2s; -ms-transition: 0.2s; -moz-transition: 0.2s; }
 
 #wrapper .mainBg.mainBgOut {-moz-animation:mainBgOut 3s cubic-bezier(0.7,-0.1, 0.25, 1) ;-o-animation:mainBgOut 3s cubic-bezier(0.7,-0.1, 0.25, 1); -webkit-animation:mainBgOut 3s cubic-bezier(0.7,-0.1, 0.25, 1) ;animation:mainBgOut 3s cubic-bezier(0.7,-0.1, 0.25, 1) }
 
@@ -315,7 +315,7 @@ box-shadow: -23px -17px 64px -5px rgba(0,90,104,0.23); }
 #work .groupping2 ul li h3 { text-transform: uppercase; font-size: 24px; font-weight: 600; transition: 0.3s; -webkit-transition: 0.3s; -ms-transition: 0.3s; -moz-transition: 0.3s;  }
 #work .groupping2 .description { font-size: 12px; text-transform: uppercase; }
 #work .groupping2 .links a { display: none; opacity: 0.9; margin-right: 50px; text-transform: uppercase; font-weight: 400; display: block; margin: 0 auto; width: 200px; letter-spacing: 0.05em; height: 40px; background-color: #300092; border-radius: 20px; text-align: center; color: #fff;line-height: 40px;-webkit-box-shadow: 0px 3px 17px 0px rgba(250,111,255,0.44); -moz-box-shadow: 0px 3px 17px 0px rgba(250,111,255,0.44); box-shadow: 0px 3px 17px 0px rgba(250,111,255,0.44); }
-#work .groupping2 .links a:first-child { margin-top: 49px; margin-bottom: 21px }
+#work .groupping2 .links a:first-child {  margin-top: 49px; margin-bottom: 21px }
 #work .groupping2 .links a:hover { opacity: 1 }
 
 
