--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ header .sns li:last-child { margin-bottom: 0 }
 /* #intro */
 #intro { overflow: hidden }
 #intro .mainBg { z-index: 10000; overflow: hidden; top: 0; left: 0; position: absolute; text-align: center; width: 100%; height: 100%; background-color: #ffcc00 }
-#intro .shadow {transition: 2s; display: inline-block; margin-left: 73px; width: 73px; height: 100%; background: url('../imgs/shadow_yell.png') no-repeat center center }
+#intro .shadow {transition: 2s; display: inline-block; margin-left: 73px; width: 73px; height: 100%; background: url('../imgs/shadow_yell.png') no-repeat center center; margin-top: -20px; }
 #intro .groupping h2 { display: block; font-size: 123px; height: 91px; line-height: 109px; font-weight: 700 }
 #intro .groupping {transition: 1.5s; overflow: hidden; position: absolute; margin-top: -75px; top: 50%; left: 50%; margin-left: -189.5px; text-align: center; }
 #intro .groupping1 { transition: 0.9s; }
@@ -456,4 +456,64 @@ footer { z-index: 100000000; text-align: center; opacity: 0.5; letter-spacing: 0
   header nav a:nth-child(2).active .line, header nav a:nth-child(2):hover .line { width: 180px }
   header nav a:nth-child(3).active .line, header nav a:nth-child(3):hover .line { width: 250px }
 }
+
+
+
+@media only screen and (max-height: 700px) and (min-width: 1024px) {
+  .greyBg p.smaller { font-size: 80px }
+
+  header .mainBg .seper { margin-left: 38% }
+  header .mainBg h4 { width: 100px; height: 100px; line-height: 100px; margin-top: -50px }
+  header h3 { margin-left: 47% }
+
+  header nav a { font-size: 40px }
+  header nav { margin-top: -99px }
+  header .mainBg .seper { height: 161px; margin-top: -81px }
+
+  header nav a:nth-child(1).active .line, header nav a:nth-child(1):hover .line { width: 190px }
+  header nav a:nth-child(2).active .line, header nav a:nth-child(2):hover .line { width: 180px }
+  header nav a:nth-child(3).active .line, header nav a:nth-child(3):hover .line { width: 250px }
+
+  .subBg { border-left: 80px solid #fc0; border-top: 80px solid #fc0; border-bottom: 80px solid #fc0; }
+  #wrapper .subBg.workBorder { border-left: 80px solid #4adece; border-top: 80px solid #4adece; border-bottom: 80px solid #4adece; }
+  #wrapper .subBg.contactBorder { border-left: 80px solid #2e2a51; border-top: 80px solid #2e2a51; border-bottom: 80px solid #2e2a51; }
+
+  #intro .shadow { background-size: 55px; background-position: left center; }
+  #border .border.top, #border .border.btm { height: 40px; }
+  #border .border.left, #border .border.right { width: 40px; }
+  footer { height: 40px; line-height: 40px; }
+
+  h1 a { left: 40px; top: 15px }
+  header #lang { right: 40px; top: 17px }
+  header .sns { width: 40px }
+  header .menu span.burger:nth-child(2) { margin: 0 4px; margin-top: 32px }
+  header .menu { right: -35px }
+
+  #about .groupping1 p { font-size: 12px }
+  #about .groupping1 h2 { font-size: 40px }
+  #about .groupping2 { background-size: 600px 286px; height: 286px }
+  #about .groupping2 > ul { padding-top: 42px }
+  #about .groupping { margin-top: -247px }
+  
+  #work h2 { font-size: 65px }
+  #work .groupping1 { top: 22% }
+  #work .groupping2 .bg { margin-top: 267px }
+  #work .groupping2 ul { top: 6%; }
+  #work .groupping1 > ul > li { margin-bottom: 25px }
+  #work .groupping1 ul ul { margin: 14px 0 }
+
+  #contact .groupping1 h3 { font-size: 65px; line-height: 70px; top: 127px }
+  #contact .groupping1 .inside span { height: 231px }
+  #contact .groupping1 .inside { height: 231px }
+  #contact .groupping2 { margin-top: 112px }
+
+}
+
+
+@media only screen and (max-height: 600px) and (min-width: 1024px) {
+  #intro .shadow { background-size: 45px; }
+
+}
+
+
 
