--- a/css/main_ko.css
+++ b/css/main_ko.css
@@ -17,6 +17,7 @@
 }
 
 @media only screen and (max-height: 700px) and (min-width: 1024px) {
-	#contact .groupping2 { margin-top: 98px; margin-left: -95px;  }
+	#contact .groupping2 { margin-top: 98px; margin-left: -103px;  }
+	#contact .groupping2 p { font-size: 14px }
 
 }
