--- a/prie/css/main.css
+++ b/prie/css/main.css
@@ -24,6 +24,83 @@ input[type=text], input[type=submit], input[type=reset],input[type=password], te
 body { margin: 0 auto; overflow: hidden }
 
 
+
+/* .loading */
+
+.loading { position: absolute; z-index: 10000000; overflow: hidden; background-color: #fff; width: 100%; height: 100%; }
+.loading .forReal { position: relative; width: 100%; height: 100%; }
+.loading .dot { top: 50%; left: 50%; margin-left: -5px; position: absolute; padding: 5px; border-radius: 50%; background: #505050; -webkit-animation: toTheRight 1s ease-in-out 0s infinite; animation: toTheRight 1s ease-in-out 0s infinite; }
+
+.loading .dot:nth-child(1) { -webkit-animation-delay: 0s; animation-delay: 0s; }
+.loading .dot:nth-child(2) { -webkit-animation-delay: 0.15s; animation-delay: 0.15s; }
+.loading .dot:nth-child(3) { -webkit-animation-delay: 0.3s; animation-delay: 0.3s; }
+.loading .dot:nth-child(4) { -webkit-animation-delay: 0.45s; animation-delay: 0.45s; }
+@-webkit-keyframes toTheRight {
+    0% {
+        -webkit-transform: translateX(-100px);
+        -moz-transform: translateX(-100px);
+        -ms-transform: translateX(-100px);
+        -o-transform: translateX(-100px);
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: translateX(100px);
+        -moz-transform: translateX(100px);
+        -ms-transform: translateX(100px);
+        -o-transform: translateX(100px);
+        transform: translateX(100px);
+        opacity: 0;
+    }
+}
+
+@-moz-keyframes toTheRight {
+    0% {
+        -webkit-transform: translateX(-100px);
+        -moz-transform: translateX(-100px);
+        -ms-transform: translateX(-100px);
+        -o-transform: translateX(-100px);
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: translateX(100px);
+        -moz-transform: translateX(100px);
+        -ms-transform: translateX(100px);
+        -o-transform: translateX(100px);
+        transform: translateX(100px);
+        opacity: 0;
+    }
+}
+
+@keyframes toTheRight {
+    0% {
+        -webkit-transform: translateX(-100px);
+        -moz-transform: translateX(-100px);
+        -ms-transform: translateX(-100px);
+        -o-transform: translateX(-100px);
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: translateX(100px);
+        -moz-transform: translateX(100px);
+        -ms-transform: translateX(100px);
+        -o-transform: translateX(100px);
+        transform: translateX(100px);
+        opacity: 0;
+    }
+}
+
 /* header */
 
 .headerBg { position: fixed; width: 100%; height: 90px; margin: 0 auto; background-color: #f5f5f5; z-index: 1000; }
